navbar women hover

--- a/try/keyup.html
+++ b/try/keyup.html
@@ -19,8 +19,9 @@
 
         #keyup {
             border-radius: 50%;
-            border: solid;
-            border-color: red;
+            border-width: 0;
+            /* border: solid;
+            border-color: red; */
             display: none;
             /* Hidden by default */
             position: fixed;
@@ -42,6 +43,10 @@
             /* Rounded corners */
             font-size: 18px;
             /* Increase font size */
+        }
+
+        #keyup:hover{
+            background-color:#e7dfdf
         }
 
     </style>
