--- a/part2/modules/index.html
+++ b/part2/modules/index.html
@@ -6,6 +6,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="shortcut icon" href="https://assets.ajio.com/static/img/favicon.ico">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <title>Product Page</title>
     <style>
         /* Product Directory */
@@ -187,7 +189,8 @@
         }
 
         .inner {
-            margin-left: 58px;
+            /* change marginLeft to 58 if any problem */
+            margin-left:0px; 
             margin-right: 58px;
             /* margin:50%; */
         }
@@ -253,6 +256,38 @@
             }
 
             margin-bottom:10px;
+        }
+
+        #keyup {
+            border-radius: 50%;
+            border-width: 0;
+            /* border: solid;
+            border-color: red; */
+            display: none;
+            /* Hidden by default */
+            position: fixed;
+            /* Fixed/sticky position */
+            bottom: 20px;
+            /* Place the button at the bottom of the page */
+            right: 30px;
+            /* Place the button 30px from the right */
+            z-index: 99;
+            /* Make sure it does not overlap */
+            /* Remove borders */
+            /* Remove outline */
+            /* Set a background color */
+            /* Text color */
+            cursor: pointer;
+            /* Add a mouse pointer on hover */
+            padding: 15px;
+            /* Some padding */
+            /* Rounded corners */
+            font-size: 18px;
+            /* Increase font size */
+        }
+
+        #keyup:hover {
+            background-color: #e7dfdf
         }
     </style>
 </head>
@@ -356,7 +391,7 @@
         </div>
     </div>
 
-    <footer>
+    <footer style="position: relative;">
         <div class="container-fluid outer">
             <div class="inner">
                 <br>
@@ -426,6 +461,33 @@
                 <br>
             </div>
     </footer>
+    <!-- scroll to top -->
+    <button onclick="topFunction()" id="keyup" title="Go to top">
+        <span class="material-symbols-outlined">
+            expand_less
+        </span>
+    </button>
 </body>
+<script>
+    //scroll to top
+    let mybutton = document.getElementById("keyup");
+
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () { scrollFunction() };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                mybutton.style.display = "block";
+            } else {
+                mybutton.style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0; // For Safari
+            document.documentElement.scrollTop = 0; // For Chrome, Firefox, IE and Opera
+        }
+</script>
 
 </html>
